--- a/OptiContentClient/OptiContentClient.csproj
+++ b/OptiContentClient/OptiContentClient.csproj
@@ -4,12 +4,12 @@
 		<TargetFramework>net7.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
-		<Version>1.0.0-preview3</Version>
+		<Version>1.0.0-preview4</Version>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<Authors>Erik Henningson</Authors>
 		<Company />
 		<Description>API client for Optimizely CMS Content API.</Description>
-		<PackageProjectUrl>https://github.com/ErikHen/OptiContent</PackageProjectUrl>
+		<PackageProjectUrl>https://github.com/ErikHen/OptiContentClient/</PackageProjectUrl>
 	</PropertyGroup>
 
 	<ItemGroup>
