--- a/OptiContentClient/OptiContentClient.csproj
+++ b/OptiContentClient/OptiContentClient.csproj
@@ -4,16 +4,15 @@
 		<TargetFramework>net7.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
-		<Version>1.0.0-preview4</Version>
+		<Version>1.0.0-preview5</Version>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<Authors>Erik Henningson</Authors>
 		<Company />
-		<Description>API client for Optimizely CMS Content API.</Description>
+		<Description>.Net client for Optimizely CMS Content Delivery API.</Description>
 		<PackageProjectUrl>https://github.com/ErikHen/OptiContentClient/</PackageProjectUrl>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<Compile Remove="Models\Media.cs" />
 		<Compile Remove="Models\Properties\PropertyBlob.cs" />
 		<Compile Remove="Models\Properties\PropertyMedia.cs" />
 	</ItemGroup>
