--- a/OptiContentClient/OptiContentClient.csproj
+++ b/OptiContentClient/OptiContentClient.csproj
@@ -1,10 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>net7.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
-		<Version>1.0.0-preview5</Version>
+		<Version>1.0.0-preview6</Version>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<Authors>Erik Henningson</Authors>
 		<Company />
