--- a/OptiContentClient/OptiContentClient.csproj
+++ b/OptiContentClient/OptiContentClient.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net7.0</TargetFramework>
+		<TargetFramework>net8.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
-		<Version>1.0.0-preview7</Version>
+		<Version>1.1.0</Version>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<Authors>Erik Henningson</Authors>
 		<Company />
@@ -13,12 +13,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<Compile Remove="Models\Properties\PropertyBlob.cs" />
-		<Compile Remove="Models\Properties\PropertyMedia.cs" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
 	</ItemGroup>
 
 </Project>
